fix list display on mobile

--- a/ParkingPalApp/app/static/css/style.css
+++ b/ParkingPalApp/app/static/css/style.css
@@ -212,11 +212,7 @@ body {
   }
 
   #list {
-    max-height: 50%;
-  }
-
-  #map {
-    height: 100vh;
+    max-height: 40%;
   }
 
 }
